--- a/todo-list/src/main/resources/application.properties
+++ b/todo-list/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=todo-list
+
+# Database Configuration
+spring.datasource.url=jdbc:h2:mem:todolistdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
