feat: hash user password

--- a/todo-list/pom.xml
+++ b/todo-list/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>spring-core</artifactId>
 			<version>6.1.7</version>
 		</dependency>
+		<dependency>
+			<groupId>at.favre.lib</groupId>
+			<artifactId>bcrypt</artifactId>
+			<version>0.10.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
