chore: Update Maven and Spring Boot dependencies, add Spring Web dependency, and implement task authorization filter

--- a/todo-list/pom.xml
+++ b/todo-list/pom.xml
@@ -63,6 +63,12 @@
 			<version>6.1.7</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>6.1.7</version>
+		</dependency>
+
+		<dependency>
 			<groupId>at.favre.lib</groupId>
 			<artifactId>bcrypt</artifactId>
 			<version>0.10.2</version>
